click headers to sort by that type, update page title

--- a/views/players.ejs
+++ b/views/players.ejs
@@ -10,6 +10,6 @@
 
 <div id="root"></div>
 <script>
-    new PlayersSearchForm("#root", "<%= searchName %>", "<%= sortBy %>", "<%= order %>", "<%= perPage %>", "<%= page %>");
+    new PlayersSearchForm("#root", "<%= searchName %>", "<%= sortBy %>", "<%= order %>", "<%= perPage %>", "<%= page %>", "<%= siteName %>");
 </script>
 <%- include('footer.ejs') -%>
