new match domination summary

--- a/views/match.ejs
+++ b/views/match.ejs
@@ -47,7 +47,7 @@
 
             case "Display DOM": {
 
-                %>renderDominationSummary("#root", basic.total_teams, parsedData);<%
+                %>new MatchDominationSummary("#root", basic.total_teams, parsedData);<%
 
             } break;
 
