--- a/public/css/main.css
+++ b/public/css/main.css
@@ -448,7 +448,9 @@ select{
 	background-color:var(--bg-color-3);
 	text-align: center;
 	color:var(--font-color-1);
-	padding:var(--padding-1);
+	padding-left:20%;
+	padding-right:20%;
+	padding:var(--padding-1) 20%;
 	margin-bottom:var(--margin-1);
 	font-size:var(--font-size-1);
 	line-height: var(--line-height-1);
@@ -749,6 +751,7 @@ canvas{
 	display:inline-block;
 	user-select: none;
 }
+
 
 .delete-button:hover{
 	color:yellow;
