--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -82,9 +82,11 @@ function renderGoBackToMain(mode){
     if(mode === "") return;
 
     %>
-    <a href="/admin">
-        <div class="admin-home">Return To Admin Home</div>
-    </a>
+    <div class="text-center">
+        <a href="/admin">
+            <div class="admin-home">Return To Admin Home</div>
+        </a>
+    </div>
     <%
 }
 
