--- a/views/rankings.ejs
+++ b/views/rankings.ejs
@@ -22,6 +22,8 @@
     "<%= selectedId %>",
     "<%= selectedTimeRange %>",
     "<%= selectedPerPage %>",
-    "<%= currentPage %>");
+    "<%= currentPage %>",
+    "<%= minMatchesSetting %>"
+    );
 </script>
 <%- include("footer.ejs") -%>
