Added explain rankings

--- a/views/rankings.ejs
+++ b/views/rankings.ejs
@@ -22,8 +22,9 @@
     "<%= selectedId %>",
     "<%= selectedTimeRange %>",
     "<%= selectedPerPage %>",
-    "<%= currentPage %>",
-    "<%= minMatchesSetting %>"
+    "<%= currentPage %>"
     );
+
+    new RankingsExplain("#root", <%- JSON.stringify(rankingSettings) %>, "<%= minMatchesSetting %>");
 </script>
 <%- include("footer.ejs") -%>
