--- a/public/css/main.css
+++ b/public/css/main.css
@@ -895,10 +895,10 @@ nav a:hover{
 }
 
 .pagination-info{
-    font-size:var(--font-size-4);
+    font-size:var(--font-size-5);
     color:var(--font-color-blue);
     padding:var(--padding-2);
-    line-height:22px;
+    line-height:20px;
 	font-weight:500;
 }
 
@@ -1061,4 +1061,9 @@ canvas{
 
 .scroll-x{
 	overflow-x: auto;
+}
+
+.rankings-explained-table td{
+	min-width:100px;
+	padding:0px 10px;
 }
